try to fix overflow

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -15,7 +15,8 @@
 .hero{
     background-color: $header-bgc;
     position: relative;
-    overflow: hidden;
+    overflow-y: visible;
+    overflow-x: hidden;
 }
 
 .hero__main-circle-icon{
